# naviconomy

./: .gitignore  pyproject.toml
src/: main.py
src/api/routes/: brands.py  octanes.py  refills.py  router.py
src/auth/: dependencies.py  models.py  routes.py  services.py  utils.py
src/config/: constants.py  settings.py
src/core/: log.py
src/crud/: brands.py  octanes.py  refills.py
src/database/: session.py  tables.py
src/exceptions/: exceptions.py
src/models/: __init__.py  brand.py  octane.py  refill.py
src/schemas/: __init__.py  brand.py  octane.py  refill.py
tests/: conftest.py  test_main.py
tests/api/routes/: conftest.py  test_brands_routes.py  test_octanes_routes.py  test_refills_routes.py  test_router.py
tests/auth/: conftest.py  test_dependencies.py  test_routes.py  test_services.py  test_utils.py
tests/crud/: conftest.py  test_brands_crud.py  test_octanes_crud.py  test_refills_crud.py
tests/database/: test_session.py  test_tables.py
